# OpenGL-Engine

./: .gitattributes  CMakeLists.txt  imgui.ini
.github/workflows/: ci.yml  cmake-single-platform.yml
assets/: rock.glb
assets/plant/: scene.gltf
assets/solider/: solider.glb
shaders/: blending.frag  blending.vert  blinn_phong.frag  blinn_phong_V2.frag  blinn_phong_V2.vert  blur.frag  brdf_integration.frag  brdf_integration.vert  cubemap.frag  cubemap.vert  deferred_light.frag  depth.frag  depth_debug.frag  depth_debug.vert  environment_map.frag  environment_map.vert  equirect_to_cubemap.frag  framebuffer.frag  fxaa.frag  fxaa.vert  gbuffer_geom.frag  gbuffer_geom.vert  geometry.frag  geometry.geom  geometry.vert  hdr.frag  instancing.frag  instancing.vert  irradiance_convolution.frag  irradiance_convolution.vert  light.frag  light.vert  light_box.frag  light_box.vert  model.frag  model.vert  object.frag  object.vert  parallax.frag  parallax.vert  (+19 more)
src/: CMakeLists.txt  Shader.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  gl_engine.cpp  gl_engine.h  gl_initializers.cpp  gl_initializers.h  gl_loader.cpp  gl_loader.h  gl_pipelines.h  gl_types.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  uniformbuffer.hpp
